Fixed formatting of image on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -190,6 +190,13 @@ html, body {
     }
     .pic-of-me {
         width: 100%;
+        height: 100%;
+    }
+    .pic-of-me > img {
+        display: block;
+        object-fit: scale-down;
+        box-shadow: none;
+
     }
     .projects {
         grid-template-columns: 1fr;
@@ -199,10 +206,6 @@ html, body {
     .header > div > a >  button {
         font-size: 1rem;
         width: 5rem;
-    }
-    .pic-of-me {
-        width: 90%;
-        height: 90%;
     }
 
 
